# tectonic-installer

./: .bazelrc  .dockerignore  .editorconfig  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  NOTICE  README.md  ROADMAP.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-tectonic-installer  bazel-testlogs  changes.md  config.tf  convert.sh  git-version  release.groovy  terraformrc.example
installer/: BUILD.bazel  Makefile  README.md  glide.yaml
installer/api/: BUILD.bazel  handlers_tectonic.go  handlers_terraform.go
installer/assets/: BUILD.bazel
installer/assets/candidate/: app-version-kubernetes.json  app-version-tectonic-cluster.json
installer/assets/frontend/css/: styles.css
installer/assets/provisioning/: tectonic-aws-controller.yaml.tmpl  tectonic-aws-worker.yaml.tmpl  tectonic-metal-controller.yaml.tmpl  tectonic-metal-worker.yaml.tmpl
installer/assets/self-hosted/: kube-apiserver.yaml.tmpl
installer/cmd/clusterctl/: clusterctl.go  generate.go
installer/cmd/clusterctl/cluster/: cluster.go  cluster_test.go  config.go  constraints.go  doc.go  scenario.go  spec.go  spec_test.go
installer/cmd/installer/: BUILD.bazel  main.go
installer/cmd/tectonic/: BUILD.bazel  main.go
installer/frontend/: BUILD.bazel  Makefile  actions.js  cluster-config.js  form.js  package.json  server.js
installer/frontend/__tests__/examples/: aws-custom-vpc-out.json  aws-existing-vpc-out.json  aws-vpc.json  aws.json  metal-out.json  metal.json
installer/frontend/components/: aws-cloud-credentials.jsx  aws-vpc.jsx  bm-cluster-info.jsx  certificate-authority.jsx  cidr.jsx  experimental-features.jsx  tf-poweron.jsx  ui.jsx
installer/frontend/ui-tests/output/: aws-custom-vpc.yaml  aws.tfvars  metal.tfvars  metal.yaml
installer/frontend/ui-tests/pages/: clusterInfoPage.js  keysPage.js
installer/frontend/ui-tests/tests/: aws.js  metal.js
installer/frontend/ui-tests/utils/: terraformTfvars.js
installer/pkg/aws/: validations_test.go
installer/pkg/config/: BUILD.bazel  cluster.go  config.go  parser.go  types.go  validate.go  validate_test.go
installer/pkg/config-generator/: BUILD.bazel  generator.go  ignition.go  tls.go
installer/pkg/config-generator/fixtures/: kube-system.yaml  test-aws.yaml
installer/pkg/config-generator/templates/files/: bootkube.yaml  init-assets.yaml  rm-assets.yaml  runtime-mappings.yaml  s3-puller.yaml  tectonic-wrapper.yaml  tectonic.yaml
installer/pkg/config-generator/templates/units/: bootkube.path.yaml  bootkube.service.yaml  dockeropts.yaml  init-assets.yaml  k8s-node-bootstrap.yaml  kubelet.yaml  locksmith.yaml  rm-assets.path.yaml  rm-assets.service.yaml  tectonic.path.yaml  tectonic.service.yaml
installer/pkg/config-generator/tls/: BUILD.bazel  ca.go  utils.go
installer/pkg/config/aws/: BUILD.bazel  aws.go
installer/pkg/config/aws/etcd/: BUILD.bazel  etcd.go
installer/pkg/config/aws/master/: BUILD.bazel  master.go
installer/pkg/config/aws/worker/: BUILD.bazel  worker.go
installer/pkg/config/azure/: BUILD.bazel  azure.go
installer/pkg/config/gcp/: BUILD.bazel  gcp.go
installer/pkg/config/govcloud/: BUILD.bazel  govcloud.go
installer/pkg/config/govcloud/etcd/: BUILD.bazel  etcd.go
installer/pkg/config/govcloud/master/: BUILD.bazel  master.go
installer/pkg/config/govcloud/worker/: BUILD.bazel  worker.go
installer/pkg/config/metal/: BUILD.bazel  metal.go
installer/pkg/config/openstack/: BUILD.bazel  openstack.go
installer/pkg/config/vmware/: BUILD.bazel  vmware.go
installer/pkg/tectonic/: BUILD.bazel  buildstate.go
installer/pkg/terraform/: BUILD.bazel  executor.go  executor_test.go
installer/pkg/terraform-generator/: aws.go  azure.go  gcp.go  generator.go  govcloud.go  metal.go  openstack.go  tectonic.go  vmware.go
installer/pkg/terraform/plugins/aws/: autoscaling_tags.go  data_source_aws_ami_ids.go  data_source_aws_cloudformation_stack_test.go  data_source_aws_ebs_snapshot_ids.go  data_source_aws_ecs_task_definition.go  data_source_aws_ecs_task_definition_test.go  data_source_aws_eip.go  data_source_aws_eip_test.go  data_source_aws_kms_alias_test.go  data_source_aws_prefix_list.go  data_source_aws_redshift_service_account.go  data_source_aws_s3_bucket_object.go  data_source_aws_s3_bucket_object_test.go  data_source_aws_vpc_endpoint.go  data_source_aws_vpc_endpoint_service_test.go  data_source_aws_vpc_endpoint_test.go  data_source_aws_vpc_peering_connection_test.go  data_source_aws_vpn_gateway_test.go  import_aws_flow_log_test.go  import_aws_iam_account_alias_test.go  import_aws_iam_role_test.go  import_aws_lambda_function_test.go  resource_aws_ami_launch_permission_test.go  (+118 more)
installer/pkg/tls/: tls.go
installer/pkg/validate/: BUILD.bazel
installer/pkg/workflow/: BUILD.bazel  cluster.go  cluster_test.go  convert.go  destroy.go  init.go  install.go  terraform.go  terraform_test.go  utils.go  workflow.go  workflow_test.go
installer/pkg/workflow/fixtures/: expected.terraform.tfvars  internal.yaml  terraform.tfvars
installer/scripts/: filter.sh  test
installer/scripts/release/: common.env.sh  get_terraform_resources.sh  make_release_tarball.sh
installer/scripts/update-payload/: make-update-payload.sh  payload.json
installer/server/: assets.go  aws.go  aws_cluster.go  aws_handlers.go  aws_status.go  bootkube.go  cluster.go  create.go  frontend.go  handlers.go  health.go  images.go  kubernetes.go  matchbox.go  metal_cluster.go  proxy.go  server.go  status.go  tectonic.go  terraform.go
installer/server/aws/cloudforms/: config.go
installer/server/cluster/: aws.go  config.go  variables.go
installer/server/terraform/: convert.go  executor.go  executor_test.go
installer/server/terraform/plugin/: plugin.go  plugin_test.go  resource_localfile.go  resource_localfile_test.go  resource_template_folder.go
installer/tests/: glide.yaml
installer/tests/aws/: aws_test.go  aws_test_helpers.go
installer/tests/sanity/: README.md
installer/tests/scripts/aws/: up-down.sh  upgrade.sh
installer/tests/scripts/bare-metal/: get-kubectl.sh  up-down.sh
(+698 files in other folders)
