load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "aws.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/config/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config/aws/etcd:go_default_library",
        "//installer/pkg/config/aws/master:go_default_library",
        "//installer/pkg/config/aws/worker:go_default_library",
    ],
)
