load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "govcloud.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/config/govcloud",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config/govcloud/etcd:go_default_library",
        "//installer/pkg/config/govcloud/master:go_default_library",
        "//installer/pkg/config/govcloud/worker:go_default_library",
    ],
)
